lit review copied through to bookdown

--- a/_output.yml
+++ b/_output.yml
@@ -2,10 +2,7 @@ bookdown::pdf_book:
   includes:
    in_hedaer: preamble.tex
   citation_packge: natbib
+  latex_engine: xelatex
   keep_text: yes
 bookdown::epub_book: default
-bookdown::gitbook:
-  config:
-    toc:
-      before: |
-        <li><a href="./Selection and Metabolic Disease in the Pacific"</a></li>
+bookdown::gitbook: default
