--- a/_output.yml
+++ b/_output.yml
@@ -1,8 +1,18 @@
 bookdown::pdf_book:
-  includes:
-   in_hedaer: preamble.tex
-  citation_packge: natbib
+  keep_tex: yes
+  dev: "cairo_pdf"
   latex_engine: xelatex
-  keep_text: yes
+  citation_package: natbib
+  template: null
+  pandoc_args: --chapters
+  toc_depth: 3
+  toc_unnumbered: no
+  toc_appendix: yes
+  quote_footer: ["\\VA{", "}{}"]
 bookdown::epub_book: default
-bookdown::gitbook: default
+bookdown::gitbook:
+ split_by: section
+ config:
+  toc:
+   collapse: none
+bookdown::html_book: default
