changes so that otago thesis sty file can be used

--- a/_output.yml
+++ b/_output.yml
@@ -9,6 +9,7 @@ bookdown::pdf_book:
   toc_unnumbered: no
   toc_appendix: yes
   quote_footer: ["\\VA{", "}{}"]
+  #documentclass: report
 bookdown::gitbook:
  split_by: section
  config:
