--- a/_output.yml
+++ b/_output.yml
@@ -4,7 +4,7 @@ bookdown::pdf_book:
   latex_engine: pdflatex
   citation_package: natbib
   template: null
-  pandoc_args: --chapters
+  pandoc_args: --top-level-division=chapter
   toc_depth: 3
   toc_unnumbered: no
   toc_appendix: yes
