--- a/_output.yml
+++ b/_output.yml
@@ -1,18 +1,21 @@
 bookdown::pdf_book:
+  includes:
+    in_header: latex/preamble.tex
+    before_body: latex/before_body.tex
   keep_tex: yes
   dev: "cairo_pdf"
   latex_engine: pdflatex
   citation_package: natbib
   template: null
   pandoc_args: --top-level-division=chapter
-  toc_depth: 3
-  toc_unnumbered: no
-  toc_appendix: yes
+  #toc_depth: 3
+  #toc_unnumbered: yes
+  #toc_appendix: yes
   quote_footer: ["\\VA{", "}{}"]
   #documentclass: report
 bookdown::gitbook:
  split_by: section
  config:
   toc:
-   collapse: none
+   collap
 bookdown::html_book: default
